--- a/flixster/Base.lproj/LaunchScreen.storyboard
+++ b/flixster/Base.lproj/LaunchScreen.storyboard
@@ -18,18 +18,35 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" fixedFrame="YES" insetsLayoutMarginsFromSafeArea="NO" image="launch_image" translatesAutoresizingMaskIntoConstraints="NO" id="A7G-ms-xYu">
-                                <rect key="frame" x="118" y="264" width="138" height="139"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                            </imageView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="il4-Vl-X9r" userLabel="Auto Layout">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <subviews>
+                                    <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" image="launch_image" translatesAutoresizingMaskIntoConstraints="NO" id="A7G-ms-xYu">
+                                        <rect key="frame" x="118.5" y="264" width="138" height="139"/>
+                                    </imageView>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="A7G-ms-xYu" firstAttribute="centerX" secondItem="il4-Vl-X9r" secondAttribute="centerX" id="dPe-XN-j15"/>
+                                    <constraint firstItem="A7G-ms-xYu" firstAttribute="centerY" secondItem="il4-Vl-X9r" secondAttribute="centerY" id="eM0-tz-pCC"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="il4-Vl-X9r" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Kvg-QZ-LCP"/>
+                            <constraint firstItem="il4-Vl-X9r" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="NN1-Ge-Od2"/>
+                            <constraint firstItem="il4-Vl-X9r" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="eUV-aA-bST"/>
+                            <constraint firstItem="il4-Vl-X9r" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="hyd-uW-DsE"/>
+                            <constraint firstItem="il4-Vl-X9r" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="kPR-WV-h1g"/>
+                            <constraint firstItem="il4-Vl-X9r" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="zw2-kP-rpw"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="52" y="374.66266866566718"/>
         </scene>
     </scenes>
     <resources>
